# short_url_rs

./: .env  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE.md  README.md  _typos.toml  abi.proto  build.rs  cliff.toml  deny.toml  short_url.db
.github/workflows/: build.yml
frontend/: package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
frontend/src/api/: index.ts
frontend/src/components/: QRCode.tsx
frontend/src/pages/: HomePage.tsx  ManagePage.tsx
frontend/src/styles/: index.css  qrcode.css
frontend/src/types/: index.ts
src/: lib.rs  main.rs
src/api/: mod.rs  qrcode.rs  redirect.rs  shorten.rs
src/db/: mod.rs
src/models/: mod.rs
src/pb/: abi.rs  mod.rs
src/services/: mod.rs
src/utils/: mod.rs  short_code_generator.rs  url_validator.rs
